# autocloud-kli

./: .gitignore  DEVELOPMENT.md  Makefile  requirements.txt
deployment/: pyproject.toml  setup.py
deployment/.github/workflows/: publish.yml  test.yml
tests/fixtures/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_zipping.py
